# Rectangle-Fitting

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  report.md  requirements.txt  upload
.github/workflows/: ci.yml
data/manual/: demo_5rects.json  easy_no_rotation.json  easy_sat_squares.json  hard_sat1.json  medium_4rects.json  medium_sat.json  medium_sat2.json  medium_unsat.json  no_rotation.json  rotation_needed.json  tiny_sat.json  tiny_unsat.json  unsat_area_overflow.json
docs/: benchmark.md  design.md
src/common/: instance_io.cpp  instance_io.hpp  instance_io.py
src/custom_solver/: heuristics.cpp  local_search.cpp  main.cpp  solver.cpp  solver.hpp  state.cpp
src/tools/: benchmark.py  gen_cases.py  summarize_results.py  visualize.py
src/z3_solver/: solver_z3.py
tests/: test_custom.py  test_z3.py
